# plumipy

./: .gitignore  LICENSE  README.md  api.py  app.py  pyproject.toml  requirements.txt
app/: app.py  main.py  main_window.py
app/html/: phonon_viewer.html
app/pages/: compare.py  force_viewer.py  geom_diff_viewer.py  home.py  inputs.py  phonon_projection.py  phonon_viewer.py  results.py
app/styles/: theme.qss
app/widgets/: file_picker.py  plot_canvas.py
plumipy/: __init__.py  api.py  cli.py  io.py  photoluminescence.py
